--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>StarFighters</title>
+<link rel="icon" type="image/png" href="https://kephost.net/p/MjI5MDg2MQ.png">
 
 <style>
 body {
@@ -116,3 +117,4 @@ Made by: Gery (Will get a lot of improvements)
 
 </body>
 </html>
+
